# pygitswitch

./: .gitignore  LICENSE  README.md  __main__.py  setup.cfg  switcher.py
github-switch/: helpers.py  installer.py  switcher.py
gitswitch/: __main__.py  helpers.py  installer.py  switcher.py
