[metadata]
name = pyGitSwitch
version = 0.3.0
description = Github Desktop Multi account switcher
long_description = file: README.md
long_description_content_type = text/markdown
author = Anvith Lobo
author_email = anvithlobo@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Version Control :: Git
    Topic :: System :: Systems Administration
    Topic :: Utilities
home_page = https://github.com/AnvithLobo/gitswitch
module = gitswitch
project_urls =
    Source Code = https://github.com/AnvithLobo/gitswitch
    Bug Tracker = https://github.com/AnvithLobo/gitswitch/issues
    Documentation = https://github.com/AnvithLobo/gitswitch/wiki

[options]
packages = gitswitch
python_requires = >=3.6
include_package_data = true
setup_requires =
    setuptools
zip_safe = false

[options.entry_points]
console_scripts =
    gitswitch = gitswitch.__main__:main

[flake8]
format = pylint
max_line_length = 200
exclude =
    venv
    .venv
